--- a/events.tac.local/Views/TAC/Events/FeatureRow.cshtml
+++ b/events.tac.local/Views/TAC/Events/FeatureRow.cshtml
@@ -5,13 +5,15 @@
 
 }
 <div class="row">
-    <div class="col-sm-4">
-        @Html.Sitecore().DynamicPlaceholder("feature-left")
-    </div>
-    <div class="col-sm-4">
-        @Html.Sitecore().DynamicPlaceholder("feature-middle")
-    </div>
-    <div class="col-sm-4">
-        @Html.Sitecore().DynamicPlaceholder("feature-right")
-    </div>
+    @Html.Sitecore().DynamicPlaceholder("featureSpot", CreateDivWrap, 3)
 </div>
+
+@functions{
+    TagBuilder CreateDivWrap(DynamicPlaceholderRenderContext context)
+    {
+        var tagBuilder = new TagBuilder("div");
+        int[] widths = new int[] { 0, 12, 6, 4, 3 };
+        tagBuilder.AddCssClass("col-sm-" + widths[context.PlaceholdersCount]);
+        return tagBuilder;
+    }
+}
