--- a/events.tac.local/Views/TAC/Events/FeatureRow.cshtml
+++ b/events.tac.local/Views/TAC/Events/FeatureRow.cshtml
@@ -5,7 +5,7 @@
 
 }
 <div class="row">
-    @Html.Sitecore().DynamicPlaceholder("featureSpot", CreateDivWrap, 3)
+    @Html.Sitecore().DynamicPlaceholder("featureSpot", CreateDivWrap, 3, 4)
 </div>
 
 @functions{
