--- a/events.tac.local/Views/CommentsForm/Index.cshtml
+++ b/events.tac.local/Views/CommentsForm/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<!-- [Comments Form] -->
-<script src="/sitecore/shell/client/Services/Assets/lib/itemservice.js"></script>
+<script src="~/Scripts/itemservice.js"></script>
 <script src="~/Scripts/commentsForm.js"></script>
 <div>
     <form onsubmit="createCommentItem(this, '@RenderingContext.Current.Rendering.Item.Paths.FullPath')">
